--- a/math154/integral_patterns.html
+++ b/math154/integral_patterns.html
@@ -29,7 +29,7 @@ $(function () {
 <!--<h2>Example 1 </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">-->
-    <P>In this lab you will use sage to calculate the antiderivatives of several functions in the same family of related functions in order to develop some intuition about the form of the antiderivatives of each family.
+    <P>In this lab you will use sage and integration techniques you have learned to calculate the antiderivatives of several functions in the same family of related functions in order to develop some intuition about the form of the antiderivatives of each family.
 
     <div class="compute">
     <script type="text/x-sage">
@@ -103,7 +103,7 @@ def _(f = input_box(f, label=' f(x) = ', width='20')):
            <li>\(\displaystyle \int \sin 2x  \sin 5x dx\)
            <li>\(\displaystyle \int \sin 6x  \sin 2x dx\)
            </ol>
-    <li>From your answers i-iii above to  what do you think the form is for \(\displaystyle \int \sin ax \sin bx dx\) where \(n\)?
+    <li>From your answers i-iii above to  what do you think the form is for \(\displaystyle \int \sin (ax) \sin (bx) dx\)?
     <li>Check your answer via integration techniques and trigonometric identities.
     </ol>
   </ol>
