--- a/math154/integral_patterns.html
+++ b/math154/integral_patterns.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+  <body style="width: 600px;" background="bg.jpg">
 
   <h1>Integral patterns</h1>
 
@@ -29,7 +29,7 @@ $(function () {
 <!--<h2>Example 1 </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">-->
-    <P>In this lab you will use sage and integration techniques you have learned to calculate the antiderivatives of several functions in the same family of related functions in order to develop some intuition about the form of the antiderivatives of each family.
+    <P>In this lab you will use sage and techniques you have learned to calculate the antiderivatives of several functions in the same family of related functions in order to develop some intuition about the form of the antiderivatives of each family.
 
     <div class="compute">
     <script type="text/x-sage">
@@ -55,7 +55,7 @@ def _(f = input_box(f, label=' f(x) = ', width='20')):
        <li>\(\displaystyle \int \frac{1}{x(x-2)}dx\)
        <li>\(\displaystyle \int \frac{1}{(x-3)^2}dx\)
        </ol>
-    <li>Based on the pattern of your answers above, determine an antiderivative for \(\displaystyle \int \frac{1}{(x+p)(x+q)}dx\) where\(p\neq q\).
+    <li>Based on the pattern of your answers above, determine an antiderivative for \(\displaystyle \int \frac{1}{(x+p)(x+q)}dx\) where \(p\neq q\).
       What changes do you need to make in the case \(p=q\)?
     <li>Use the method of partial fractions to confirm/check your answer above.
     </ol>
