--- a/math250/week5.html
+++ b/math250/week5.html
@@ -226,7 +226,7 @@ $$a \cos B + b \cos A = c$$
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
 <div id="ex10" class="collapse">
 
-The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatsone bridge</a>. It is useful for determining an unknown resistance of an object.
+The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatstone bridge</a>. It is useful for determining an unknown resistance of an object.
 When using the bridge to find resistance \(R_x\), resistances \(R_1\) and \(R_3\) are known, while \(R_2\) is adjustable.
 \(R_2\) is adjusted until the current through the middle branch (from junctions B to D) is equal to zero. Then the resistance \(R_x\) can be found from
 $$R_x  = \frac{R_2 R_3}{R_1}.$$
