--- a/math250/week6.html
+++ b/math250/week6.html
@@ -45,7 +45,8 @@
 
 
     <li> What is the length of vector \( \vec{v} = \begin{bmatrix}2\\5\\-3\end{bmatrix}\)?
-    <li> True or False. \(\vec{u} = \begin{bmatrix}0\\3\end{bmatrix}\) and \(\vec{v} = \begin{bmatrix}0\\2\end{bmatrix}\) are linearly depedent.
+    <li> True or False. \(\vec{u} = \begin{bmatrix}0\\3\end{bmatrix}\) and \(\vec{v} = \begin{bmatrix}0\\2\end{bmatrix}\) are 
+      linearly dependent.
     </ol>
  </div>
 
