--- a/math250/week6.html
+++ b/math250/week6.html
@@ -62,7 +62,7 @@
 <h2>Example 2 - Linear independence? </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
-<P>The book defines that three vectors \(\vec{u},vec{v},\vec{w} \in \mathbb{R}^3\) are linearly dependent if and only if there exist scalars \(a,b,c\) not all zero such that \(a\vec{u} + b\vec{v} + c\vec{w} = \vec{0}\).
+<P>The book defines that three vectors \(\vec{u},\vec{v},\vec{w} \in \mathbb{R}^3\) are linearly dependent if and only if there exist scalars \(a,b,c\) not all zero such that \(a\vec{u} + b\vec{v} + c\vec{w} = \vec{0}\).
   It then says that the vectors are linearly independent if they are not linearly dependent. What is a definition of linear independence, i.e. what is the negation of the above definition?<br><br>
 
 <P> Determine if the set of vectors \(\left\{ \begin{bmatrix} 1 \\ 1 \\ 1\end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 3\end{bmatrix}, \begin{bmatrix} 1 \\ 3 \\ 2\end{bmatrix} \right\} \) are linearly independent or linearly dependent.
