--- a/math250/week7.html
+++ b/math250/week7.html
@@ -43,6 +43,7 @@
     <li> Find the basis for the subspace of \(\mathbb{R}^4\) that describes all vectors of the form \( (a,b,c,d) \) for which \(a=3c\) and \(b=4d\). 
     <li> Describe the span of the set of vectors below.
       $$\left\{ \begin{bmatrix}2\\1\end{bmatrix},\begin{bmatrix}-1\\-1/2\end{bmatrix} \right\}$$
+    <li> What is the standard basis for \( \mathbb{R}^3 \)? Explain why this is a basis?
     </ol>
  </div>
 
