--- a/other/quests/start.html
+++ b/other/quests/start.html
@@ -1,1 +1,21 @@
-1
+<html>
+
+<head>
+<title>Leprechaun Quest</title>
+
+</head>
+
+<body>
+
+<h2>Help find Wub and Grub!</h2>
+
+<P>Wub and Grub are missing! Help find them before St. Patrick's day by following the clues.
+  To begin click the start button below.<br>
+  <img src="./wubandgrub.jpg" height=400 width=400>
+<br><br>
+<form method="get" action="n0.html">
+    <button type="submit">Start!</button>
+</form>
+</form>
+</body>
+</html>
