--- a/math250/week8.html
+++ b/math250/week8.html
@@ -154,7 +154,7 @@
 <div id="ex7" class="collapse">
 
 <ol type='1'>
-<li> Find a linear homogeneous DE with constant coefficients that has general solution \(y(x) = (A + Bx + Cx^2\)e^{2x} \).
+<li> Find a linear homogeneous DE with constant coefficients that has general solution \(y(x) = (A + Bx + Cx^2)e^{2x} \).
 <li> Find a linear homogeneous DE with constant coefficients that has a solution \(y(x) = 5e^{2x} + 2\cos 2x  \).
 </ol>
 </div>
