--- a/math250/week8.html
+++ b/math250/week8.html
@@ -32,8 +32,8 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> Show \(y_1 = 4e^{-2t}\) solves the DE \(y'' + 5y' + 6 = 0\).
-    <li> What is the characteristic equation for \(y'' + 5y' + 6 = 0\)?
+    <li> Show \(y_1 = 4e^{-2t}\) solves the DE \(y'' + 5y' + 6y = 0\).
+    <li> What is the characteristic equation for \(y'' + 5y' + 6y = 0\)?
     <li> Assume \(y_1 = \cos 2t\) and \(y_2 = \sin 2t\) and \(c_1, c_2 \in \mathbb{R}\). Show \(y = c_1 y_1 + c_2 y_2\) solves \(y'' + 4y = 0\).
       Find values of \(c_1\) and \(c_2\) so that \(y(0)=3\) and \(y'(0) = 8\).
     <li> What is the value of \(e^{i\pi} + 1\)?
