--- a/math154/newtonsmethod.html
+++ b/math154/newtonsmethod.html
@@ -62,7 +62,8 @@ def _(f = e^x - 2, c = float(0.5), eps=(-3,(-16, -1)), interval=float(0.5)):
              line([(w,h),(w,j)],rgbcolor='black',thickness=0.2) for i,w in enumerate(iterates))
      show(P + L, xmin=z-interval, xmax=z+interval)
 
-</script></div>
+</script>
+</div>
 
 
 
