--- a/math250/week8.html
+++ b/math250/week8.html
@@ -37,7 +37,7 @@
     <li> Assume \(y_1 = \cos 2t\) and \(y_2 = \sin 2t\) and \(c_1, c_2 \in \mathbb{R}\). Show \(y = c_1 y_1 + c_2 y_2\) solves \(y'' + 4y = 0\).
       Find values of \(c_1\) and \(c_2\) so that \(y(0)=3\) and \(y'(0) = 8\).
     <li> What is the value of \(e^{i\pi} + 1\)?
-    <li> What is the general solution to \(y'' + 5y' + 5y = 0\)?
+    <li> What is the general solution to \(y'' + 3y'-10y=0\)?
     <li> What is the general solution to \(5\frac{d^4 y}{dx^4} + 3\frac{d^3 y}{dx^3} = 0\)?
     <li> If \(y(x) = c_1 e^{(a+ib)x} + c_2 e^{(a-ib)x} = d_1 e^{ax} \cos(bx) + d_2 e^{ax} \sin(bx)\) find \(d_1,d_2\) in terms of \(c_1,c_2\).
     </ol>
