--- a/math250/week8.html
+++ b/math250/week8.html
@@ -106,7 +106,7 @@
   <tr><td>Resistor</td><td>\(R\)</td><td>\( R I\)</td><td>Ohms (\(\Omega\))</td></tr>
 </table>
   <ol type='1'>
-    <li> Use Kirchoff's Loop Law to write a differential equation for the charge, \( Q\), using the symbols given in the table above.
+    <li> Assume some charge is built up on the capacitor and then the applied voltage is turned off, i.e. \(E=0\). Use Kirchoff's Loop Law to write a differential equation for the charge, \( Q\), using the symbols given in the table above.
       Reminder: current is the time rate of change of charge.
     <li> Label this equation.
     <li> What is the characteristic equation for this DE?
