--- a/math250/week8.html
+++ b/math250/week8.html
@@ -37,9 +37,13 @@
     <li> Assume \(y_1 = \cos 2t\) and \(y_2 = \sin 2t\) and \(c_1, c_2 \in \mathbb{R}\). Show \(y = c_1 y_1 + c_2 y_2\) solves \(y'' + 4y = 0\).
       Find values of \(c_1\) and \(c_2\) so that \(y(0)=3\) and \(y'(0) = 8\).
     <li> What is the value of \(e^{i\pi} + 1\)?
-    <li> What is the general solution to \(y'' + 3y'-10y=0\)?
+    <li> What is the general solution to \(y'' + 5y' + 5y = 0\)?
     <li> What is the general solution to \(5\frac{d^4 y}{dx^4} + 3\frac{d^3 y}{dx^3} = 0\)?
     <li> If \(y(x) = c_1 e^{(a+ib)x} + c_2 e^{(a-ib)x} = d_1 e^{ax} \cos(bx) + d_2 e^{ax} \sin(bx)\) find \(d_1,d_2\) in terms of \(c_1,c_2\).
+    <li> What is the solution, \(y(t)\), to the IVP below?
+      $$y'' - 4y' + 13 y = 0, \hspace{1cm} y(0) = 1, y'(0) = -4$$
+    <li> What is the solution, \(x(t)\), to the IVP below?
+        $$x'' + 2x' - 3x = 0, \hspace{1cm} x(0) = 6, x'(0) = -2$$
     </ol>
  </div>
 
@@ -106,7 +110,7 @@
   <tr><td>Resistor</td><td>\(R\)</td><td>\( R I\)</td><td>Ohms (\(\Omega\))</td></tr>
 </table>
   <ol type='1'>
-    <li> Assume some charge is built up on the capacitor and then the applied voltage is turned off, i.e. \(E=0\). Use Kirchoff's Loop Law to write a differential equation for the charge, \( Q\), using the symbols given in the table above.
+    <li> Use Kirchoff's Loop Law to write a differential equation for the charge, \( Q\), using the symbols given in the table above.
       Reminder: current is the time rate of change of charge.
     <li> Label this equation.
     <li> What is the characteristic equation for this DE?
@@ -154,8 +158,10 @@
 <div id="ex7" class="collapse">
 
 <ol type='1'>
-<li> Find a linear homogeneous DE with constant coefficients that has general solution \(y(x) = (A + Bx + Cx^2)e^{2x} \).
-<li> Find a linear homogeneous DE with constant coefficients that has a solution \(y(x) = 5e^{2x} + 2\cos 2x  \).
+<li> Find a 2nd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = C_1e^{x} + C_2e^{-x} \).
+<li> Find a 2nd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = A \cos(\pi x) \).
+<li> Find a 3rd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = (A + Bx + Cx^2)e^{2x} \).
+<li> Find a 4th order linear homogeneous DE with constant coefficients that has a solution \(y(x) = 5xe^{2x} + 2\cos 2x  \).
 </ol>
 </div>
 
