--- a/math250/week8.html
+++ b/math250/week8.html
@@ -159,7 +159,7 @@
 
 <ol type='1'>
 <li> Find a 2nd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = C_1e^{x} + C_2e^{-x} \).
-<li> Find a 2nd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = A \cos(\pi x) \).
+<li> Find a 2nd order linear homogeneous DE with constant coefficients that has a solution \(y(x) = A \cos(\pi x) \).
 <li> Find a 3rd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = (A + Bx + Cx^2)e^{2x} \).
 <li> Find a 4th order linear homogeneous DE with constant coefficients that has a solution \(y(x) = 5xe^{2x} + 2\cos 2x  \).
 </ol>
