--- a/math154/logscale_plots.html
+++ b/math154/logscale_plots.html
@@ -66,8 +66,8 @@ def fit_line(x_data,y_data) :
 time=numpy.array([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83])
 cfs=numpy.array([2410,2390,2270,2190,2020,2010,1890,1890,1880,1690,1600,1550,1430,1380,1290,1210,1190,1130,1100,1030,965,965,909,868,842,810,779,754,724,707,684,661,645,629,608,592,582,566,552,537,518,513,499,485,472,459,446,433,425,417,404,392,389,377,373,366,358,351,344,336,329,322,315,312,309,302,299,292,289,283,276,276,270,267,261,258,255,252,249,246,240,238,235])
 cms=numpy.array([5.43,5.41,5.32,5.25,5.11,5.1,5,5,4.99,4.81,4.72,4.67,4.54,4.49,4.39,4.29,4.27,4.19,4.15,4.06,3.97,3.97,3.89,3.83,3.79,3.74,3.69,3.65,3.6,3.57,3.53,3.49,3.46,3.43,3.39,3.36,3.34,3.31,3.28,3.25,3.21,3.2,3.17,3.14,3.11,3.08,3.05,3.02,3,2.98,2.95,2.92,2.91,2.88,2.87,2.85,2.83,2.81,2.79,2.77,2.75,2.73,2.71,2.7,2.69,2.67,2.66,2.64,2.63,2.61,2.59,2.59,2.57,2.56,2.54,2.53,2.52,2.51,2.5,2.49,2.47,2.46,2.45])
-lcfs = log(cfs,base=exp(1))
-ltime = log(time,base=exp(1))
+#lcfs = log(cfs,base=exp(1))
+#ltime = log(time,base=exp(1))
 
 @interact
 
@@ -83,26 +83,26 @@ auto_update=False):
             txt = "y = " + str(a) + "x + " + str(b)
             p+=text(txt,(40,2000),color='red')
     elif ptype =='semilog x':
-      p=list_plot(zip(ltime,cfs),axes_labels=['ln time','discharge'])
+      p=list_plot_semilogx(zip(time,cfs),axes_labels=['ln time','discharge'])
       if wfit:
-            a,b = fit_line(ltime,cfs)
-            p+=plot(a*x+b,1,4.2,color='red',thickness=3)
+            a,b = fit_line(log(time),cfs)
+            p+=plot(a*log(x)+b,1,83,color='red',thickness=3)
             txt = "y = " + str(a) + "x + " + str(b)
-            p+=text(txt,(4,2000),color='red')
+            p+=text(txt,(40,2000),color='red')
     elif ptype =='semilog y':
-      p=list_plot(zip(time,lcfs),axes_labels=['time','ln discharge'])
+      p=list_plot_semilogy(zip(time,cfs),axes_labels=['time','ln discharge'])
       if wfit:
-            a,b = fit_line(time,lcfs)
-            p+=plot(a*x+b,1,83,color='red',thickness=3)
+            a,b = fit_line(time,log(cfs))
+            p+=plot(exp(a*x+b),1,83,color='red',thickness=3)
             txt = "y = " + str(a) + "x + " + str(b)
-            p+=text(txt,(40,7),color='red')
+            p+=text(txt,(40,2000),color='red')
     elif ptype =='log log':
-      p=list_plot(zip(ltime,lcfs),axes_labels=['ln time','ln discharge'])
+      p=list_plot_loglog(zip(time,cfs),axes_labels=['ln time','ln discharge'])
       if wfit:
-            a,b = fit_line(ltime,lcfs)
-            p+=plot(a*x+b,1,4.2,color='red',thickness=3)
+            a,b = fit_line(log(time),log(cfs))
+            p+=plot(exp(b) * x^a,1,83,color='red',thickness=3)
             txt = "y = " + str(a) + "x + " + str(b)
-            p+=text(txt,(1,6.5),color='red')
+            p+=text(txt,(40,2000),color='red')
     show(p)
 
 </script>
