--- a/math250/week9.html
+++ b/math250/week9.html
@@ -32,10 +32,10 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> What is the general solution to \(x'' + 25x =0, x(0)=1,x'(0)=0\)?
+    <li> What is the solution to \(x'' + 25x =0, x(0)=1,x'(0)=0\)?
     <li> Find \(C\) and \(\alpha\) such that \(A \cos(\omega t) + B \sin(\omega t) = C \cos(\omega t - \alpha) \).
     <li> What are the three families of terms we can consider when using the Method of Undetermined Coefficients? Why?
-    <li> TBD
+    <li> What is the behavior of a mass-spring system with \(m=2, k=4, b=1\)? Find and sketch a solution \(x(t)\) and classify the system as over,under,or crtitically damped.
     <li> TBD
     </ol>
  </div>
@@ -155,7 +155,7 @@
 </div>
 
 
-<h2>Example 4 - Undamped example (rembering trigonometry)</h2>
+<h2>Example 4 - Undamped example (remembering trigonometry)</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex4">Example 4</button>
 <div id="ex4" class="collapse">
 <P>Consider an undamped mass spring example with \(m=1,k=9,x(0)=1,x'(0)=2\). What is the amplitude and period of the resulting motion/displacement?
