--- a/math250/week9.html
+++ b/math250/week9.html
@@ -142,7 +142,7 @@
 <br>
 <P> Consider the DE for \(y(x)\)
   $$y'' - y' - 2y = f(x)$$
-  for various functions \(f(x)\.
+  for various functions \(f(x)\).
   <ol type='A'>
     <li> What is the general solution to the associated homogeneous equation?
     <li> Let \(f(x) = 3x^2 - 1\). To find a particular solution to the nonhomogeneous equation we will use the method of undetermined coefficients with the form \(y_p = Ax^2 + Bx + C\).
