--- a/math250/week10.html
+++ b/math250/week10.html
@@ -32,7 +32,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0">Warmups</button>
   <div id="ex0" class="collapse">
     <ol type='A'>
-    <li> What for should you choose for \(y_p\) when trying to find a particular solution of \(y'' - 2y' + y' = 3te^{t}\)?
+    <li> What form should you choose for \(y_p\) when trying to find a particular solution of \(y'' - 2y' + y = 3te^{t}\)?
      <li>
     </ol>
  </div>
