--- a/math154/power_series-ans.html
+++ b/math154/power_series-ans.html
@@ -40,6 +40,8 @@
  <li>$$\sum_{n=1}^{\infty} \left( 7 + 2^n \right)^{-4}$$
 </ol>
 
+<P><a href="./series_convergence_4examples.pdf">Answers about series convergence</a>
+
 <div class="compute"><script type="text/x-sage">
 # everything following hash symbol is comment
 var('n')
@@ -67,6 +69,7 @@ def _(N = slider(1,100,1), f = input_box(default = "1/(n^2)", type = str)):
     <li>$$2 \sum_{n=1}^{\infty} \frac{3^n}{2n}x^n$$
     <li>$$\sum_{n=1}^{\infty} (-1)^{n+1} \frac{1}{n2^n}(x-3)^n$$
   </ol>
+  <P><a href="./power_series_convergence.pdf">Solutions</a>
 
   </div>
 
@@ -83,6 +86,7 @@ def _(N = slider(1,100,1), f = input_box(default = "1/(n^2)", type = str)):
     <li> Find the power series representation of \(\tan^{-1}(x)\). (Hint: start with the power series for \(h(x) = \frac{1}{1 + x^2}\) and antidifferentiate. Solve for the constant of integration by substituting \(x = 0\).) On what
 interval does the series converge to the function?
   </ol>
+  <P><a href="./power_series_topic3.pdf">Solutions</a>
 </div>
 
 <h2>Topic 4 - Kempner Series</h2>
@@ -106,6 +110,7 @@ contain 9 as one or more of their digits?
 bounded by $$\sum_{d=1}^{\infty} \frac{h(d)}{m(d)}.$$
 <li> Show that this series converges.
 </ol>
+<P>This series is called the Kempner Series. You can read more about its convergence at its <a href="https://en.wikipedia.org/wiki/Kempner_series#Convergence">wikipedia page</a>.
   </div>
 
 </body>
