--- a/math250/exam2review.html
+++ b/math250/exam2review.html
@@ -28,7 +28,7 @@
 <hr>
 <ol type='1'>
 <li> If we know \( y(x) = e^{2x} \) is a solution to \(y''' + y' -10 y = 0\) write down the general solution.
-<li> Find the general solution to \(y^{(4)} - 5y'' + 4y = e^x - xe^{2x}\).
+<li>  What form should you use when using the method of undetermined coefficients to find a particular solution to \(y^{(4)} - 5y'' + 4y = e^x - xe^{2x}\)?
 <li> Use the trigonometric identity \(\cos (a \pm b) = \cos(a)\cos(b) \mp \sin(a) \sin(b)\) to find a general solution to \(y'' + y' + y = \sin(x) \sin(3x)\).
 <li> Find the amplitude of the steady-state, or long-term behavior, of the solution to \(x'' + 4x' + 4x = 10 \cos(3t)\).
 <li> A 2 kg mass is connected to a spring and dashpot. The dashpot provides 8 Netwons of damping force for every 1 m/s of velocity. The spring provides a 16 Newtons of restoring force for every meter of displacement.
