--- a/math250/exam2review.html
+++ b/math250/exam2review.html
@@ -33,7 +33,7 @@
 <li> Find the amplitude of the steady-state, or long-term behavior, of the solution to \(x'' + 4x' + 4x = 10 \cos(3t)\).
 <li> A 2 kg mass is connected to a spring and dashpot. The dashpot provides 8 Netwons of damping force for every 1 m/s of velocity. The spring provides a 16 Newtons of restoring force for every meter of displacement.
 The spring is stretched 1 meter and released from rest. Set up an IVP governing the displacement of the mass. Classify the system as overdamped, underdamped, or critically damped. Justify your answer.
-<li> Solve \(y'' - 4y' + 3y\) with \(y(0) = 7, y'(0) = 11\).
+<li> Solve \(y'' - 4y' + 3y=0\) with \(y(0) = 7, y'(0) = 11\).
 <li> Find a basis for the solution space of the system below.
 $$x_1 - 2x_2 + 3x_3 = 0$$
 $$2x_1 - 3x_2 - 3x_3 = 0$$
