--- a/math154/taylor_examples.html
+++ b/math154/taylor_examples.html
@@ -117,8 +117,8 @@ so the classical energy is given by \(E =\frac{1}{2}mv^2\) (which gives the same
   <img src="./images/dipole.png" width=300><br>
 <P> Consider the electric dipole shown above with charges of opposite sign a distance \(d\) apart. The electric field at point \(p\) is given by \(E = \frac{q}{D^2} - \frac{q}{(D+d)^2}\).
   <ol>
-    <li>Show that \(E = \frac{q}{D^2} (1 - (1 - \frac{d}{D})^{-2}) \).
-    <li>Find the first two nonzero terms of the Taylor expansion of \( (1 - \frac{d}{D})^{-2} \) about \(\frac{d}{D} = 0\).
+    <li>Show that \(E = \frac{q}{D^2} (1 - (1 + \frac{d}{D})^{-2}) \).
+    <li>Find the first two nonzero terms of the Taylor expansion of \( (1 + \frac{d}{D})^{-2} \) about \(\frac{d}{D} = 0\).
     <li>Show that \(E \sim \frac{1}{D^3}\), i.e. \(E\) behaves like \(\frac{1}{D^3}\), if \(D \gg d\). <!--as \(\frac{d}{D} \rightarrow 0\)-->
   </ol>
 </div>
