--- a/math250/week12.html
+++ b/math250/week12.html
@@ -117,7 +117,7 @@
 <h2>Example 6 - 2 story house </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6">Example 6</button>
 <div id="ex6" class="collapse">
-<img src="./house.png"><br>
+<img src="./house.png" width=400><br>
 <p> Consider the 2 story house above. Imagine that the furnace breaks. Heat can be exchanged between the top and bottom floors and the outside.
   <ol type='a'>
     <li> Explain why the system below could be a model for the temperature dynamics of each floor.
